--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Kitty</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et atque voluptas aliquid, reprehenderit ad in iusto voluptates, quam, nulla pariatur expedita ut! Omnis laudantium magnam ipsam autem, quos error numquam?</p>
 </body>
 </html>
